test/parser.d/invalid/reassign4.souc.bad
x: Int = 5

main() = do
	x = 3
	print $x
